# firepydaq

./: .buildinfo  .gitignore  AUTHORS.md  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  ExampleConfig.html  ExampleFormulae.html  ExamplePostProcess.html  LICENSE  LatestChange.md  Main.html  Makefile  README.md  Schema.html  UsageAcquisition.html  UsageDashboard.html  UsageDevices.html  authors.html  changelog.html  conduct.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: ExampleConfig.doctree  ExampleFormulae.doctree  ExamplePostProcess.doctree  Main.doctree  Schema.doctree  UsageAcquisition.doctree  UsageDashboard.doctree  UsageDevices.doctree  authors.doctree  changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.github/: pull_request_template.md
.github/workflows/: BuildDists.yml  MakeExe.yml  ReleaseDists.yml  RepoStats.yml  RunPytest.yml  SphinxDocs.yml  repo-stats.yml
Refs/: App1_ConfigFile.py  App2_PyDAQ.py  App3_DashProcessing.py  EchoAlicat.py  PR_Template.md  Packaging_Guide.md  PostProcessing.py  Utils.py
Refs/assets/: DashAppPyDAQ.css
_modules/: index.html
_modules/firepydaq/: FIREpyDAQ_Acquisition.html
_sources/: ExampleConfig.ipynb.txt  ExampleFormulae.ipynb.txt  UsageDashboard.md.txt  UsageDevices.md.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/firepydaq/: index.html
build-recipes/: FIREpyDAQ_Acquisition.py  FIREpyDAQ_Acquisition.spec  FIREpyDAQ_NIConfigMaker.py  FIREpyDAQ_NIConfigMaker.spec  build_requirements.txt
docs/: DashboardUsage.md  Devices.md  ExampleConfig.ipynb  ExampleFormulae.ipynb  ExamplePostProcess.ipynb  GeneralUsage.md  Main.md  Makefile  PostProcessExample.ipynb  Schema.md  UsageAcquisition.md  UsageDashboard.md  UsageDevices.md  conf.py  index.md  make.bat  requirements.txt
firepydaq/: FIREpyDAQ_Acquisition.py  __init__.py
guide/: FIREpyDAQ_Guide.tex  FIREpyDAQ_UserGuide.tex  commoncommands.tex
tests/: Anvii_settings.json  RunAquisitionOnly.py  RunDashboard.py  conftest.py  dashboard.py  myfile. txt  popup_dark.css  popup_light.css  styles.css  styles_dark.css  test_Acquisition.py  test_Devices.py  test_Menu.py  test_PostProcessing.py  test_import.py  yourfile.txt
(+269 files in other folders)
