[tool.poetry]
name = "firepydaq"
version = "0.1.0"
description = "A user-interface to read data during experiments"
authors = ["Dushyant Chaudhari <dush.chaudhari@gmail.com>"]
license = "GNU General Public v3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
nidaqmx = "^1.0.0"
alicat = "^0.6.2"
dash = "^2.17.1"
dash-auth = "^2.3.0"
dash-daq = "^0.5.0"
dash-bootstrap-components = "^1.6.0"
matplotlib = "^3.7.0"
numpy = "^1.26.0"
pandas = "^2.2.2"
plotly = "^5.22.0"
polars = "^1.1.0"
pyarrow = ">=14.0.2"
pyqtgraph = "^0.13.7"
pyserial = "^3.5"
PySide6 = "^6.7.2"
PyVISA = "^1.14.1"
jsonschema = "^4.23.0"
setuptools = "^72.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
coverage = "^7.6.1"
coverage-badge = "^1.1.2"
pyinstaller = "6.7.0"
pytest-qt = "^4.4.0"

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^1.1.1", python = "^3.9"}
sphinx-autoapi = "^3.1.2"
furo = "^2024.8.6"
notebook = "^7.0.0"
sphinxext-opengraph = "^0.9.1"
sphinxcontrib-googleanalytics="^0.4"
sphinx-jsonschema = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "firepydaq/"
